force-app/main/default/objects/Task__c/fields/Habit_Failed__c.field-meta.xml
<CustomField>
    <fullName>Habit_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Habit Failed</label>
    <type>Checkbox</type>
</CustomField>