force-app/main/default/objects/Task__c/fields/Overdue__c.field-meta.xml
<CustomField>
    <fullName>Overdue__c</fullName>
    <formula>IF(CASE( RecordType.DeveloperName, 
&#39;TO_DO&#39;, IF( TODAY() &gt; Due_Date__c, 1, 0), 
&#39;Daily&#39;, IF( TODAY() &gt;  DATEVALUE( CreatedDate ) , 1, 0), 
&#39;Habit&#39;, 0, 0)  = 1, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue</label>
    <type>Checkbox</type>
</CustomField>