force-app/main/default/objects/Task__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <formula>CASE( RecordType.DeveloperName, 
&#39;TO_DO&#39;, (CASE( Difficulty__c , &#39;Trivial&#39;, 1, &#39;Easy&#39;, 2, &#39;Medium&#39;, 3, &#39;Hard&#39;, 5, 0))* IF( Overdue__c, 0.5, 1) , 
&#39;Daily&#39;, (CASE( Difficulty__c , &#39;Trivial&#39;, 0.5, &#39;Easy&#39;, 1, &#39;Medium&#39;, 1.5, &#39;Hard&#39;, 2.5, 0))* IF( Overdue__c, 0, 1), 
&#39;Habit&#39;, 1 - IF(  Habit_Failed__c, 2, 0), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>