force-app/main/default/objects/Task__c/fields/Task_Completed__c.field-meta.xml
<CustomField>
    <fullName>Task_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Completed</label>
    <type>Checkbox</type>
</CustomField>