force-app/main/default/objects/Task__c/recordTypes/Habit.recordType-meta.xml
<RecordType>
    <fullName>Habit</fullName>
    <active>true</active>
    <label>Habit</label>
</RecordType>