force-app/main/default/objects/Task__c/recordTypes/TO_DO.recordType-meta.xml
<RecordType>
    <fullName>TO_DO</fullName>
    <active>true</active>
    <label>TO-DO</label>
</RecordType>