force-app/main/default/objects/Task__c/validationRules/Task_Completed_Cant_Edit_Difficulty.validationRule-meta.xml
<ValidationRule>
    <fullName>Task_Completed_Cant_Edit_Difficulty</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(Status__c ) = &#39;Completed&#39;</errorConditionFormula>
    <errorDisplayField>Difficulty__c</errorDisplayField>
    <errorMessage>You can&#39;t change the difficulty because this Task is marked as Completed.</errorMessage>
</ValidationRule>